syntax = "proto3";

option csharp_namespace = "Forums.Api";

package topics;

import "google/protobuf/empty.proto";

service TopicsProto {
  rpc GetTopicByPermalink (GetTopicByPermalinkRequest) returns (ProtoTopic);
  rpc CreateTopic (CreateTopicRequest) returns (CreateTopicReply);
  rpc CreatePost (CreatePostRequest) returns (google.protobuf.Empty);
  rpc ReactOnPost (ReactOnPostRequest) returns (google.protobuf.Empty);
  rpc GetMorePostChains (GetMorePostChainsRequest) returns (GetMorePostChainsReply);
  rpc GetRecentTopicsByForum (GetRecentTopicsByForumRequest) returns (GetRecentTopicsByForumReply);
  rpc GetHeadpostByTopic (GetHeadpostByTopicRequest) returns (ProtoPost);
}

message GetTopicByPermalinkRequest {
  string forum = 1;
  string permalink = 2;
}

message ProtoTopic {
  string id = 1;
  string forum = 2;
  string title = 3;
  string permalink = 4;
  ProtoPost head_post = 6;
  repeated ProtoPost posts = 7;
}

message CreateTopicRequest {
  string access_token = 1;
  string forum = 2;
  string title = 3;
  string body = 4;
}

message CreateTopicReply {
  string permalink = 1;
}

message CreatePostRequest {
  string access_token = 1;
  string parent = 2;
  optional bytes media = 3;
  string body = 4;
}

message ReactOnPostRequest {
  string access_token = 1;
  string post = 2;
  ReactionUpdateState state = 3;
}

message GetMorePostChainsRequest {
  string access_token = 1;
  string topic = 2;
  repeated string seen_postchains = 3;
}

message GetMorePostChainsReply {
  repeated ProtoPost posts = 1;
}

message ProtoPost {
  string id = 1;
  optional string attachment = 2;
  string author_username = 3;
  string body = 4;
  optional string parent = 5;
  uint32 likes = 6;
  uint32 loves = 7;
  uint32 insights = 8;
  uint32 funnies = 9;
  uint32 dislikes = 10;
}

message GetRecentTopicsByForumRequest {
  string forum = 1;
}

message GetRecentTopicsByForumReply {
  repeated ProtoTopic topics = 1;
}

message GetHeadpostByTopicRequest {
  string topic = 1;
}

enum ReactionUpdateState {
  None = 0;
  Like = 1;
  Love = 2;
  Funny = 3;
  Insightful = 4;
  Dislike = 5;
}